# AIPersonalAssistant

./: requirements.txt
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  stt.py  tts.py
backend/tests and sample codes/: test.py
