[project]
name = "personalaiassistant"
version = "\u001b[A\u001b[B"
description = ""
authors = [
    {name = "zzpulkitzz",email = "gpulkitgupta72@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
